--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <div class="block-one">
         <img src="magician.jpg"/>
         <div class="Task-info">
-            <p>Tasks and tribulations of our wonderful Twin Eclipse</p>
+            <p class="p-tap">Tasks and Perils </p>
+            <p class="p-otd">of the dreamy</p>
+            <p class="p-te">Twin Eclipse</p>
         </div>
         <img src="high_priestess.jpg"/>
     </div>
