--- a/plans.html
+++ b/plans.html
@@ -10,6 +10,7 @@
     <div class="navbar">
         <a href="plans.html">Plans</a>
         <a href="promises.html">Promises</a>
+        <a href="index.html">The Keep</a>
     </div>
     <div class="block-one">
         <img src="high_priestess.jpg"/>
@@ -23,6 +24,7 @@
                 <li>Stabilize the portal</li>
             </ul>
         </div>
+        <img src="high_priestess.jpg"/>
     </div>
 </body>
 </html>
