--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="styles-index.css"/>
 </head>
 <body>
-    <div class="navbar">
+    <nav class="navbar">
         <a href="plans.html">Plans</a>
         <a href="promises.html">Promises</a>
-    </div>
+    </nav>
     <div class="block-one">
         <img src="magician.jpg"/>
         <div class="Task-info">
