--- a/plans.html
+++ b/plans.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="styles-plans.css"/>
 </head>
 <body>
-    <div class="navbar">
+    <nav class="navbar">
         <a href="plans.html">Plans</a>
         <a href="promises.html">Promises</a>
         <a href="index.html">The Keep</a>
-    </div>
+    </nav>
     <div class="block-one">
         <img src="high_priestess.jpg"/>
         <div class="Task-info">
